<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_content"
    tools:context=".ui.neighbour_list.DetailNeighbourActivity"
    android:orientation="vertical"
    android:background="#D3D3D3">

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favories_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout1"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout2"
        android:src="@drawable/star"
        app:backgroundTint="#fff">
    </android.support.design.widget.FloatingActionButton>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline1">

        <ImageButton
            android:id="@+id/return_mainActivity_btn"
            android:layout_width="42dp"
            android:layout_height="34dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/bouton_de_retour"
            android:elevation="2dp"
            android:src="@drawable/arrow_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/avatar_url_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/bigger_neighbour_picture">
        </ImageView>

        <TextView
            android:id="@+id/avatar_whiteName_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white_name"
            android:textSize="40sp"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/guideline1"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        android:background="#fff">

        <TextView
            android:id="@+id/avatar_blackName_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/black_name"
            android:textSize="30sp"
            android:textColor="#000"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/localisation_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/marker"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar_blackName_txt"
            android:contentDescription="@string/ping_map_icon" />

        <TextView
            android:id="@+id/localisation_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/adresse"
            app:layout_constraintLeft_toRightOf="@id/localisation_img"
            app:layout_constraintTop_toTopOf="@+id/localisation_img" />

        <ImageView
            android:id="@+id/phone_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/phone"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/localisation_img"
            app:layout_constraintStart_toStartOf="@id/localisation_img"
            tools:layout_editor_absoluteY="102dp"
            android:contentDescription="@string/phone_icon" />

        <TextView
            android:id="@+id/phone_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/numero_de_telephone"
            app:layout_constraintLeft_toRightOf="@id/phone_img"
            app:layout_constraintTop_toBottomOf="@+id/localisation_txt"
            app:layout_constraintTop_toTopOf="@id/phone_img" />

        <ImageView
            android:id="@+id/internet_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/internet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@id/phone_img"
            app:layout_constraintTop_toBottomOf="@id/phone_img"
            android:contentDescription="@string/network_icon" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/network"
            app:layout_constraintLeft_toRightOf="@+id/internet_img"
            app:layout_constraintTop_toBottomOf="@+id/phone_txt"
            app:layout_constraintTop_toTopOf="@id/internet_img" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <TextView
            android:id="@+id/aboutMe_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/about_me"
            android:textColor="#000"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/radom_text"
            app:layout_constraintTop_toBottomOf="@id/aboutMe_txt" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>